--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,26 @@ jobs:
           command: |
             go test -timeout=15m -count=1 -tags=integration -race -v ./integration_tests/...
 
+  extract-coverage-to-code-climate:
+    docker:
+      - image: cimg/go:<< pipeline.parameters.golang-version >>
+    steps:
+      - checkout
+      - run:
+          name: Download CodeClimate test reporter
+          command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+      - run:
+          name: Generate coverage
+          command: |
+            GIT_COMMIT_SHA="${CIRCLE_SHA1}"
+            GIT_BRANCH="${CIRCLE_BRANCH}"
+            ./cc-test-reporter before-build
+            go test -coverprofile=c.out ./...
+            ./cc-test-reporter after-build --coverage-input-type gocov --prefix $(go list -m) --exit-code $?
+      - store_artifacts:
+          path: c.out
 
 workflows:
   version: 2
@@ -67,3 +87,7 @@ workflows:
       - test
       - checks
       - test-integration
+      - extract-coverage-to-code-climate:
+          filters:
+            branches:
+              only: main
